[package]
name = "pdf_process"
version = "0.1.0"
edition = "2021"
description = "Library for rendering and extracting metadata/text from PDF files using poppler"
readme = "README.md"
license = "MIT"

homepage = "https://github.com/jacobtread/pdf_process"
repository = "https://github.com/jacobtread/pdf_process"
keywords = ["pdf", "image", "conversion"]
categories = [
    "multimedia",
    "multimedia::images",
    "multimedia::encoding",
    "visualization",
]

[dependencies]
# Async runtime & utils
tokio = { version = "1", features = ["io-util", "process"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Image 
image = { version = "0.25", default-features = false, features = [
    "rayon",
    "jpeg",
] }

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
